# miden-avalon-game

./: .gitignore  README.md
onchain/game-account/: Cargo.toml  README.md
onchain/game-account/src/: lib.rs
onchain/game-account/wit/: interface.wit
onchain/player-account/: Cargo.toml  README.md
onchain/player-account/src/: lib.rs
onchain/player-account/wit/: interface.wit
onchain/player-account/wit-deps/: miden.wit
