[package]
name = "game_account"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup

miden = { git = "https://github.com/0xMiden/compiler" }

wit-bindgen-rt = "0.28"

[package.metadata.component]
package = "miden:game-account"

[package.metadata.miden]
project-kind = "account"
supported-types = ["RegularAccountUpdatableCode"]

[package.metadata.component.target.dependencies]
"miden:base" = { path = "wit-deps/miden.wit" }
"miden:core-intrinsics" = { path = "wit-deps/miden-core-intrinsics.wit" }
"miden:core-stdlib" = { path = "wit-deps/miden-core-stdlib.wit" }
"miden:core-base" = { path = "wit-deps/miden-core-base.wit" }

